syntax = "proto3";

package proto.common;

import "account-balance.proto";

option java_package = "com.grpc.course";
option java_multiple_files = true;

message TransferRequest {
    int32 from_account = 1;
    int32 to_account = 2;
    int32 amount = 3;
}

enum TransferStatus {
    REJECTED = 0;
    COMPLETED = 1;
}

message TransferResponse {
    TransferStatus status = 1;
    AccountBalance from_account = 2;
    AccountBalance to_account = 3;
}

service TransferService {
    rpc Transfer (stream TransferRequest) returns (stream TransferResponse);
}