syntax = "proto3";

package proto.common;

option java_package = "com.grpc.course";
option java_multiple_files = true;

message AccountBalance {
    int32 balance = 1;
    int32 account_number = 2;
}
